    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, BFedder, inomag, Agorfa, aya9aladdin, shudipto-amin, cbouy,
         HenokB, umak1106, tamandeeps, Mrqeoqqt

 * 2.2.0

Fixes
  * MOL2 can read files without providing optional columns:
    subst_id, subst_name and charge. (Issue #3385, PR #3598)
  * When converting an AtomGroup to an RDKit molecule (PR #3044):
    - the atoms are now in the same order
    - the output of `atom.GetMonomerInfo().GetName()` now follows the
      guidelines for PDB files while the original name is still available
      through `atom.GetProp("_MDAnalysis_name")`
    - using `NoImplicit=False` should no longer throw a `SanitizationError`
  * Contacts can now accept static AtomGroups as well as selection texts.
    (Issue #2666, PR #3565)
  * Fixed DumpReader triclinic box dimensions reading. (Issue #3386, PR #3403)
  * Updated the badge in README of MDAnalysisTest to point to Github CI Actions

Enhancements
  * Improves the RDKitConverter's accuracy (PR #3044): AtomGroups containing
    monatomic ion charges or edge cases with nitrogen, sulfur, phosphorus and
    conjugated systems should now have correctly assigned bond orders and
    charges.

Changes
  * ITPParser no longer adds an angle for water molecules that have the SETTLE
    constraint applied to them. This mirrors the way the constraint is handled
    in AMBER. (Issue #2417, PR #3564)

Deprecations


03/06/22 IAlibay, melomcr, mdd31, ianmkenney, richardjgowers, hmacdope,
         orbeckst, scal444, p-j-smith, edisj, Atharva7K, ojeda-e, jbarnoud,
         yangtcai

 * 2.1.0

Fixes
  * Use uint64_t loop counters in C level distance functions to avoid overflow
    for large arrays (Issue #3512, PR #3513).